.golden/6623238490461560947/golden

INITIALPATH:7:20: error: Variable not in scope: b0001
  |
7 | main = putStrLn [f|{0b0001}|]
  |                    ^^^^^^^^^^
